Fix broken values files

--- a/helm/charts/services/amplication-build-manager/templates/deployment.yaml
+++ b/helm/charts/services/amplication-build-manager/templates/deployment.yaml
@@ -7,14 +7,14 @@ spec:
         - volumeMounts:
             - name: {{ .Values.volume.name }}
               mountPath: {{ .Values.volume.path }}
-            - name: {{ .Values.dsg-volume.name }}
-              mountPath: {{ .Values.dsg-volume.path }}
+            - name: {{ .Values.dsgVolume.name }}
+              mountPath: {{ .Values.dsgVolume.path }}
       volumes:
         - name: {{ .Values.volume.name }}
           persistentVolumeClaim:
             claimName: {{ .Values.global.pvc.name }}
         - name: {{ .Values.dsg-volume.name }}
           persistentVolumeClaim:
-            claimName: {{ .Values.global.dsg-pvc.name }}
+            claimName: {{ .Values.global.dsgPvc.name }}
 {{- end }}
           
