Remove dash from values file property

--- a/helm/charts/services/amplication-build-manager/templates/deployment.yaml
+++ b/helm/charts/services/amplication-build-manager/templates/deployment.yaml
@@ -13,7 +13,7 @@ spec:
         - name: {{ .Values.volume.name }}
           persistentVolumeClaim:
             claimName: {{ .Values.global.pvc.name }}
-        - name: {{ .Values.dsg-volume.name }}
+        - name: {{ .Values.dsgVolume.name }}
           persistentVolumeClaim:
             claimName: {{ .Values.global.dsgPvc.name }}
 {{- end }}
