--- a/nx.json
+++ b/nx.json
@@ -33,10 +33,16 @@
   },
   "targetDefaults": {
     "test": {
-      "dependsOn": ["db:prisma:generate", "^db:prisma:generate"]
+      "dependsOn": ["db:prisma:generate"]
+    },
+    "db:prisma:generate": {
+      "dependsOn": ["^db:prisma:generate"]
     },
     "build": {
-      "dependsOn": ["^build", "db:prisma:generate", "^db:prisma:generate"]
+      "dependsOn": ["^build", "db:prisma:generate"]
+    },
+    "serve": {
+      "dependsOn": ["db:prisma:generate"]
     },
     "prepare": {
       "dependsOn": ["^prepare"]
