--- a/helm/charts/infra/templates/dsg-pv.yaml
+++ b/helm/charts/infra/templates/dsg-pv.yaml
@@ -1,3 +1,3 @@
-{{ include "base.pv" (list . "infra.dsgPv") -}}
-{{- define "infra.pv" -}}
+{{ include "base.pv" (list . "infra.dsg-pv") -}}
+{{- define "infra.dsg-pv" -}}
 {{- end }}
