--- a/helm/charts/infra/values.yaml
+++ b/helm/charts/infra/values.yaml
@@ -7,11 +7,11 @@ pv:
   name: efs-pv-custom
   handle: fs-03a0a5ba30d788595::fsap-08494d4659781878b
 
-dsgPvc:
+dsg-pvc:
   name: dsg-efs-pvc
   storageRequest: 1Gi
   storageName: efs-sc
 
-dsgPv:
+dsg-pv:
   name: dsg-efs-pv
   handle: fs-0a5d600fe9ec1387f::fsap-0c0986f263735b48c
