--- a/helm/charts/infra/templates/dsg-pvc.yaml
+++ b/helm/charts/infra/templates/dsg-pvc.yaml
@@ -1,3 +1,3 @@
-{{ include "base.pvc" (list . "infra.dsg-pvc") -}}
-{{- define "infra.dsg-pvc" -}}
+{{ include "base.pvc" (list . "infra.dsgPvc") -}}
+{{- define "infra.dsgPvc" -}}
 {{- end }}
