--- a/ee/packages/amplication-git-pull-service/project.json
+++ b/ee/packages/amplication-git-pull-service/project.json
@@ -3,7 +3,10 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "ee/packages/amplication-git-pull-service/src",
   "projectType": "application",
-  "implicitDependencies": ["amplication-kafka"],
+  "implicitDependencies": [
+    "amplication-kafka",
+    "amplication-nest-logger-module"
+  ],
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
