--- a/helm/charts/amplication/values-eugene.yaml
+++ b/helm/charts/amplication/values-eugene.yaml
@@ -161,7 +161,7 @@ amplication-build-manager:
 
       DSG_LOG_TOPIC: internal.dsg-log.0
 
-      DSG_RUNNER_URL: http://webhook-eventsource-svc.next-dsg.svc.cluster.local:12000/example
+      DSG_RUNNER_URL: http://webhook-eventsource-svc.eugene-dsg.svc.cluster.local:12000/example
 
       BUILD_ARTIFACTS_BASE_FOLDER: /amplication-data/build-data
       BUILD_ARTIFACTS_CODE_FOLDER: code
