--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "4.28.3",
     "@typescript-eslint/parser": "4.28.3",
     "base-64": "1.0.0",
+    "colors": "^1.4.0",
     "cross-fetch": "3.1.5",
     "docker-compose": "0.23.17",
     "eslint": "7.17.0",
