--- a/nx.json
+++ b/nx.json
@@ -39,7 +39,7 @@
       "dependsOn": ["^db:prisma:generate"]
     },
     "build": {
-      "dependsOn": ["^build", "db:prisma:generate"]
+      "dependsOn": ["^build", "db:prisma:generate", "^db:prisma:generate"]
     },
     "serve": {
       "dependsOn": ["db:prisma:generate"]
