move build-manager to dsg-infra

--- a/helm/charts/amplication/values-eugene.yaml
+++ b/helm/charts/amplication/values-eugene.yaml
@@ -3,9 +3,9 @@ global:
     name: eugene-efs-claim
   pv:
     name: efs-pv-eugene
-  dsgPv: 
+  dsgJobsPv: 
     name: dsg-efs-pv-eugene
-  dsgPvc:
+  dsgJobsPvc:
     name: dsg-efs-pvc-eugene
 
   nodeSelector:
