--- a/helm/charts/dsg-runner-infra/templates/pv.yaml
+++ b/helm/charts/dsg-runner-infra/templates/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: efs-pv-{{ .Values.envName }}-dsg
+  name: dsg-jobs-{{ .Values.envName }}-dsg
 spec:
   capacity:
     storage: 5Gi
