--- a/helm/charts/dsg-runner-infra/charts/amplication-build-manager/Chart.yaml
+++ b/helm/charts/dsg-runner-infra/charts/amplication-build-manager/Chart.yaml
@@ -5,7 +5,7 @@ description: A Helm chart for the amplication-build-manager component of Amplica
 dependencies:
 - name: base
   version: "0.1.0"
-  repository: "file://../../base"
+  repository: "file://../../../base"
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
