--- a/helm/charts/dsg-runner-infra/charts/amplication-build-manager/templates/dsg-jobs-pvc.yaml
+++ b/helm/charts/dsg-runner-infra/charts/amplication-build-manager/templates/dsg-jobs-pvc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: dsg-jobs-{{ .Values.envName }}-dsg
+  name: dsg-jobs
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
-  volumeName: dsg-jobs-{{ .Values.envName }}-dsg
+  volumeName: dsg-jobs
   storageClassName: efs-sc
   volumeMode: Filesystem
