--- a/helm/charts/dsg-runner-infra/templates/dsg-jobs-pv.yaml
+++ b/helm/charts/dsg-runner-infra/templates/dsg-jobs-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: "{{ .Values.dsgJobsPv.name }}"
+  name: {{ .Values.dsgJobsPv.name }}-{{ .Values.envName }}
 spec:
   capacity:
     storage: 5Gi
@@ -12,4 +12,4 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   csi:
     driver: efs.csi.aws.com
-    volumeHandle: "{{ .Values.dsgJobsPv.volumeHandle }}"
+    volumeHandle: {{ .Values.dsgJobsPv.volumeHandle }}
