--- a/ee/packages/amplication-git-pull-service/.env
+++ b/ee/packages/amplication-git-pull-service/.env
@@ -12,11 +12,10 @@ SERVICE_DB_NAME=amplication-git-pull-service
 # Docker
 COMPOSE_PROJECT_NAME=amplication-git-pull-service
 
-# kafka
+# Kafka
 KAFKA_BROKERS='localhost:9092'
 KAFKA_CONSUMER_GROUP=git-pull-event
 KAFKA_CLIENT_ID=repository-pull
-KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
 
 # Git
 MAX_SNAPSHOTS=[place-your-max-snapshot-here]
