Fix import of type-fest using import type

--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -54,11 +54,11 @@
     "serve": {
       "executor": "@nrwl/node:node",
       "options": {
-        "buildTarget": "amplication-git-pull-service:build"
+        "buildTarget": "amplication-server:build"
       },
       "configurations": {
         "production": {
-          "buildTarget": "amplication-git-pull-service:build:production"
+          "buildTarget": "amplication-server:build:production"
         }
       }
     },
