--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -12,14 +12,20 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["packages/amplication-server/**/*.ts"]
+        "lintFilePatterns": [
+          "packages/amplication-server/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/packages/amplication-server"],
+      "outputs": [
+        "coverage/packages/amplication-server"
+      ],
       "options": {
         "jestConfig": "packages/amplication-server/jest.config.ts",
         "passWithNoTests": true
@@ -27,7 +33,9 @@
     },
     "test:e2e": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/packages/amplication-server"],
+      "outputs": [
+        "coverage/packages/amplication-server"
+      ],
       "options": {
         "jestConfig": "packages/amplication-server/jest.config.e2e.ts",
         "passWithNoTests": true,
@@ -36,8 +44,13 @@
     },
     "build": {
       "executor": "@nrwl/node:webpack",
-      "outputs": ["{options.outputPath}"],
-      "dependsOn": ["graphql:schema:generate", "graphql:schema:check"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
+      "dependsOn": [
+        "graphql:schema:generate",
+        "graphql:schema:check"
+      ],
       "options": {
         "outputPath": "dist/packages/amplication-server",
         "main": "packages/amplication-server/src/main.ts",
@@ -72,9 +85,15 @@
     },
     "graphql:schema:generate": {
       "executor": "nx:run-commands",
-      "inputs": ["{projectRoot}/src/**/*.ts"],
-      "dependsOn": ["^db:prisma:generate"],
-      "outputs": ["packages/amplication-server/src/schema.graphql"],
+      "inputs": [
+        "{projectRoot}/src/**/*.ts"
+      ],
+      "dependsOn": [
+        "^db:prisma:generate"
+      ],
+      "outputs": [
+        "packages/amplication-server/src/schema.graphql"
+      ],
       "options": {
         "command": "ts-node -P tsconfig.app.json -r tsconfig-paths/register scripts/generate-graphql-schema.ts",
         "cwd": "packages/amplication-server"
@@ -82,8 +101,12 @@
     },
     "graphql:schema:check": {
       "executor": "nx:run-commands",
-      "inputs": ["{projectRoot}/src/schema.graphql"],
-      "dependsOn": ["graphql:schema:generate"],
+      "inputs": [
+        "{projectRoot}/src/schema.graphql"
+      ],
+      "dependsOn": [
+        "graphql:schema:generate"
+      ],
       "options": {
         "command": "ts-node -P tsconfig.app.json -r tsconfig-paths/register scripts/check-graphql-schema",
         "cwd": "packages/amplication-server"
