return back build manager, but deploy to dsg namespace

--- a/helm/charts/amplication/values-eugene.yaml
+++ b/helm/charts/amplication/values-eugene.yaml
@@ -3,6 +3,8 @@ global:
     name: eugene-efs-claim
   pv:
     name: efs-pv-eugene
+  dsgJobsPv:
+    name: dsg-jobs-eugene
   nodeSelector:
     role: custom-envs
   tolerations:
