--- a/helm/charts/dsg-runner-infra/templates/dsg-jobs-pv.yaml
+++ b/helm/charts/dsg-runner-infra/templates/dsg-jobs-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ .Values.dsgJobsPv.name }}-{{ .Values.envName }}
+  name: {{ .Values.dsgJobsPv.name }}
 spec:
   capacity:
     storage: 5Gi
