--- a/helm/charts/services/amplication-build-manager/templates/build-artifacts-pvc.yaml
+++ b/helm/charts/services/amplication-build-manager/templates/build-artifacts-pvc.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: dsg-jobs
+  name: build-artifacts
+  namespace: {{ .Release.Namespace }}-dsg
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
-  volumeName: dsg-jobs
+  volumeName: efs-pv-{{ .Release.Namespace }}
   storageClassName: efs-sc
   volumeMode: Filesystem
