--- a/helm/charts/services/amplication-build-manager/templates/build-artifacts-pvc.yaml
+++ b/helm/charts/services/amplication-build-manager/templates/build-artifacts-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ Values.name }}-build-artifacts
+  name: {{ .Values.name }}-build-artifacts
   namespace: {{ .Release.Namespace }}-dsg
 spec:
   accessModes:
