--- a/helm/charts/services/amplication-build-manager/templates/configmap.yaml
+++ b/helm/charts/services/amplication-build-manager/templates/configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: amplication-build-manager
-  namespace: {{ .Values.Namespace }}-dsg
+  namespace: {{ .Release.Namespace }}-dsg
 data: 
   {{- toYaml .Values.config.env | nindent 2 }}
