DSG migration almost done

--- a/nx.json
+++ b/nx.json
@@ -20,6 +20,7 @@
           "prepare",
           "check-format",
           "test",
+          "test:update-snapshot",
           "db:init",
           "lint",
           "test:e2e",
