--- a/.github/workflows/generated-app-tests.yml
+++ b/.github/workflows/generated-app-tests.yml
@@ -1,57 +1,57 @@
-name: Generated App Tests
-on:
-  workflow_dispatch:
-  pull_request:
-    types: [opened, synchronize, reopened]
-    paths:
-      - "packages/**"
+# name: Generated App Tests
+# on:
+#   workflow_dispatch:
+#   pull_request:
+#     types: [opened, synchronize, reopened]
+#     paths:
+#       - "packages/**"
 
-jobs:
-  test-generated-app:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: [16.x]
-    timeout-minutes: 15
-    steps:
-      - uses: actions/checkout@v2
+# jobs:
+#   test-generated-app:
+#     runs-on: ubuntu-20.04
+#     strategy:
+#       matrix:
+#         node-version: [16.x]
+#     timeout-minutes: 15
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: ${{ matrix.node-version }}
 
-      - name: Cache node modules
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.npm
-            node_modules
-            */*/node_modules
-          key: GA-E2E-${{ runner.os }}-${{matrix.node-version}}-${{ hashFiles('./packages/amplication-data-service-generator/**/package-lock.json')}}
-          restore-keys: |
-            GA-E2E-${{ runner.os }}-${{matrix.node-version}}
-            GA-E2E-${{ runner.os }}-
-      - name: Update npm
-        run: npm i -g npm@8.1.2
+#       - name: Cache node modules
+#         uses: actions/cache@v2
+#         with:
+#           path: |
+#             ~/.npm
+#             node_modules
+#             */*/node_modules
+#           key: GA-E2E-${{ runner.os }}-${{matrix.node-version}}-${{ hashFiles('./packages/amplication-data-service-generator/**/package-lock.json')}}
+#           restore-keys: |
+#             GA-E2E-${{ runner.os }}-${{matrix.node-version}}
+#             GA-E2E-${{ runner.os }}-
+#       - name: Update npm
+#         run: npm i -g npm@8.1.2
 
-      - name: Install Root Dependencies
-        run: npm ci
+#       - name: Install Root Dependencies
+#         run: npm ci
 
-      - name: Install Data Service Generator Dependencies
-        run: lerna bootstrap --scope=@amplication/data-service-generator --include-dependencies
+#       - name: Install Data Service Generator Dependencies
+#         run: lerna bootstrap --scope=@amplication/data-service-generator --include-dependencies
 
-      - name: Data Service Generator - Geneeate Prisma
-        run: lerna run prisma:generate --scope=@amplication/data-service-generator --include-dependencies
+#       - name: Data Service Generator - Geneeate Prisma
+#         run: lerna run prisma:generate --scope=@amplication/data-service-generator --include-dependencies
 
-      - name: Build Data Service Generator
-        run: lerna run build --scope=@amplication/data-service-generator --include-dependencies
+#       - name: Build Data Service Generator
+#         run: lerna run build --scope=@amplication/data-service-generator --include-dependencies
 
-      - name: Generate test data service
-        run: npm run generate-test-data-service
+#       - name: Generate test data service
+#         run: npm run generate-test-data-service
 
-      - name: Run test data services tests
-        run: lerna run test --scope=@amplication/data-service-generator
-#      TODO:Review @amplication/data-service-generator test:e2e
-#      - name: Run Data Service Generator E2E test
-#        run: lerna run test:e2e --scope=@amplication/data-service-generator
+#       - name: Run test data services tests
+#         run: lerna run test --scope=@amplication/data-service-generator
+# #      TODO:Review @amplication/data-service-generator test:e2e
+# #      - name: Run Data Service Generator E2E test
+# #        run: lerna run test:e2e --scope=@amplication/data-service-generator
