--- a/nx.json
+++ b/nx.json
@@ -33,13 +33,10 @@
   },
   "targetDefaults": {
     "test": {
-      "dependsOn": ["db:prisma:generate"]
-    },
-    "db:prisma:generate": {
-      "dependsOn": ["^db:prisma:generate"]
+      "dependsOn": ["db:prisma:generate", "^db:prisma:generate"]
     },
     "build": {
-      "dependsOn": ["^build", "db:prisma:generate"]
+      "dependsOn": ["^build", "db:prisma:generate", "^db:prisma:generate"]
     },
     "serve": {
       "dependsOn": ["db:prisma:generate"]
