--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -47,24 +47,17 @@
     "@types/react-router-dom": "5.3.3",
     "@types/base-64": "1.0.0",
     "@types/replace-ext": "2.0.0",
-    "@typescript-eslint/eslint-plugin": "4.28.3",
-    "@typescript-eslint/parser": "4.28.3",
     "babylon": "^6.18.0",
     "base-64": "1.0.0",
     "colors": "^1.4.0",
     "cross-fetch": "3.1.5",
     "docker-compose": "0.23.17",
-    "eslint": "7.17.0",
-    "eslint-config-react-app": "6.0.0",
     "eslint-plugin-import": "2.23.4",
     "get-port": "5.1.1",
     "sleep-promise": "9.1.0",
-    "ts-node": "^10.9.1"
-  },
-  "oldDevDependencies": {
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "ts-node": "^10.9.1",
     "eslint-plugin-testing-library": "3.10.2",
+    "babel-eslint": "10.1.0",
     "@prisma/client": "3.15.2",
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.8",
@@ -75,7 +68,6 @@
     "@types/prettier": "2.1.5",
     "@types/semver": "7.3.9",
     "@types/supertest": "2.0.12",
-    "babel-eslint": "10.1.0",
     "bcrypt": "5.0.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
