--- a/packages/amplication-data-service-generator/tsconfig.app.json
+++ b/packages/amplication-data-service-generator/tsconfig.app.json
@@ -1,21 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["node"],
-    "emitDecoratorMetadata": true,
-    "target": "es2017",
-    "declaration": true,
-    "removeComments": true,
-    "incremental": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "strict": true,
-    "jsx": "react",
-    "lib": ["es2020", "dom"]
+    "types": ["node"]
   },
   "include": ["src"],
   "exclude": [
