--- a/packages/amplication-data-service-generator/tsconfig.spec.json
+++ b/packages/amplication-data-service-generator/tsconfig.spec.json
@@ -1,27 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["jest", "node"],
-    "emitDecoratorMetadata": true,
-    "target": "es2017",
-    "declaration": true,
-    "removeComments": true,
-    "incremental": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "strict": true,
-    "jsx": "react",
-    "lib": ["es2020", "dom"]
+    "types": ["jest", "node"]
   },
-  "exclude": [
-    "**/**.template.ts",
-    "**/**.template.tsx",
-    "**/**.template.env",
-    "**/static/**/**"
-  ],
   "include": ["jest.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
 }
