added pv and pvc for build manager, move build manager to infra chart

--- a/helm/charts/dsg-runner-infra/charts/amplication-build-manager/templates/deployment.yaml
+++ b/helm/charts/dsg-runner-infra/charts/amplication-build-manager/templates/deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.name }}
-  namespace: {{ .Release.Namespace }}-dsg
   labels:
     app: {{ .Values.name }}
 spec:
@@ -77,10 +76,10 @@ spec:
       volumes:
         - name: build-artifacts
           persistentVolumeClaim:
-            claimName: {{ .Values.name }}-build-artifacts
+            claimName: build-artifacts
         - name: dsg-jobs
           persistentVolumeClaim:
-            claimName: {{ .Values.name }}-dsg-jobs
+            claimName: dsg-jobs
       {{- end }}
       {{- if hasKey .Values.global "nodeSelector"}}
       nodeSelector:
