--- a/helm/charts/dsg-runner-infra/templates/build-artifacts-pvc.yaml
+++ b/helm/charts/dsg-runner-infra/templates/build-artifacts-pvc.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  namespace: {{ .Release.Namespace }}-dsg
-  name: {{ .Values.name }}-dsg-jobs
+  name: build-artifacts
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
-  volumeName: {{ .Values.global.dsgJobsPv.name }}
+      storage: 5Gi
+  volumeName: {{ .Values.buildArtifactsPv.name }}
   storageClassName: efs-sc
   volumeMode: Filesystem
