--- a/helm/charts/dsg-runner-infra/values/eugene.yaml
+++ b/helm/charts/dsg-runner-infra/values/eugene.yaml
@@ -4,6 +4,10 @@ dsgJobsPv:
   name: dsg-jobs-eugene
   volumeHandle: fs-0a5d600fe9ec1387f::fsap-0c0986f263735b48c
 
+buildArtifactsPv:
+  name: build-artifacts-eugene
+  volumeHandle: 
+
 amplication-build-manager:
   config:
     env:
